Bug 1680688 - Add a delay before we reload PAC url r=necko-reviewers,valentin

Apparently, some VPN software also manipulate PAC url in system settings. In this case, the PAC url may not be available when we detect the network change, so this patch introduce a pref for adding a delay before reloading the PAC.

Differential Revision: https://phabricator.services.mozilla.com/D104449